--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,13 +14,18 @@ services:
     env_file:
       - ./.env.prod
     depends_on:
-      - db
-  db:
-    image: postgres:13
+      - postgres
+  postgres:
+    build: services/postgres
     volumes:
+      - ./:/tmp/db
       - postgres_data_prod:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - PGUSER=postgres
+    ports:
+      - 42604:5432
   nginx:
     build: ./services/nginx
     volumes:
