--- a/services/postgres/Dockerfile
+++ b/services/postgres/Dockerfile
@@ -1,9 +1,20 @@
 FROM postgis/postgis
 
 RUN apt-get update && apt-get install -y \
+    git \
+    build-essential \
+    postgresql-server-dev-all \
+    postgresql-12-rum \
     less \
     make \
     vim
+
+RUN git clone https://github.com/postgrespro/rum /tmp/rum
+
+WORKDIR /tmp/rum
+
+RUN make USE_PGXS=1
+RUN make USE_PGXS=1 install
 
 WORKDIR /tmp/db
 
